--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.js">
+  <link rel="stylesheet" href="projects.css">
   <link rel="stylesheet" href="index.html">
+  <link rel="stylesheet" href="personal.html">
   <link rel="stylesheet" href="about.html">
   <link rel="stylesheet" href="contact.html">
+  <link rel="stylesheet" href="projects.css">
   <link rel="stylesheet" href="personal.html">
   <link rel="stylesheet" href="ui-ux.html">
   <link rel="stylesheet" href="nss.html">
   <link rel="stylesheet" href="teaching.html">
-  <link rel="stylesheet" href="projects.css">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="main.js">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,11 +30,11 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand navbar-light">
     <div class="container-fluid nav">
-      <a class="logo text-decoration-none" href="index.html">Dani Crosby</a>
+      <a class="logo" href="index.html">Dani Crosby</a>
       <ul class="navbar-nav justify-content-end">
-        <li class="nav-item"><a class="nav-link text-decoration-line-through" href="index.html">work</a></li>
-        <li class="nav-item"><a class="nav-link text-decoration-none" href="about.html">about</a></li>
-        <li class="nav-item"><a class="nav-link text-decoration-none" href="contact.html">contact</a></li>
+        <li class="nav-item"><a class="nav-link text-decoration-underline" href="personal.html">work</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
       </ul>
     </div>
   </nav>
@@ -56,21 +58,17 @@
         </div>
    
         <div class="col-5 project-tiles ui-ux">
-          <a href="ux-ui.html">
+          <a href="ui-ux.html">
           <div class="tile-text">ux & ui</div>
         </a>
         </div>
- 
 
-      
         <div class="col-5 project-tiles nss">
           <a href="nss.html">
           <div class="tile-text">nss</div>
         </a>
         </div>
  
-
-      
         <div class="col-5 project-tiles teaching">
           <a href="teaching.html">
           <div class="tile-text">teaching</div>
