--- a/ui-ux.html
+++ b/ui-ux.html
@@ -27,7 +27,6 @@
 <body>
 
   <!-- NAVBAR -->
-  <!-- NAVBAR -->
   <nav class="navbar navbar-expand navbar-light">
     <div class="container-fluid nav">
       <a class="logo" href="index.html">Dani Crosby</a>
@@ -42,7 +41,7 @@
   <!-- INTRO CONTAINTER -->
   <div class="container-fluid projects-container">
     <div class="projects-title">
-      <h1>Personal Projects</h1>
+      <h1>UI & UX Projects</h1>
     </div>
     <div class="lead">
       <p>Below are a couple of personal projects that are part of a multi-part mock website series. I simulate existing
@@ -137,8 +136,8 @@
      <!-- PAGINATION -->
      <nav aria-label="Page navigation">
       <ul class="pagination justify-content-end">
-        <li class="page-item disabled"><a class="page-link">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="ui-ux.html">Next</a></li>
+        <li class="page-item"><a class="page-link" href="personal.html">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="nss.html">Next</a></li>
       </ul>
     </nav>
 
